Final app but celcius and fahneit is not separated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--  header -->
 
     <div class="header">
-        <p>Odin Weather app</p>
+        <p>Weather app</p>
     </div>
 
   <!-- main -->
@@ -19,7 +19,15 @@
             <label for="search">City:</label>
             <input type="text" id="city" name="city">
         </div>
-        <div class="output"></div>
+        <div class="output">
+            <div class="location"></div>
+            <div class="imgDescription"></div>
+            <div class="time"></div>
+            <div class="result">
+                <div class="celcius"></div>
+                <div class="Fahneit"></div>
+            </div>
+        </div>
     </div>
 
     <!-- footer -->
