addition of search button

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <!-- main -->
     <div class="main">
         <div class="input">
-            <label for="search">City:</label>
             <input type="text" id="city" name="city">
+            <button id="searchBtn">search</button>
         </div>
         <div class="output">
             <div class="location"></div>
