weather app final commit

--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
         <p>Weather app</p>
     </div>
 
-  <!-- main -->
-    <div class="main">
-        <div class="input">
-            <input type="text" id="city" name="city">
-            <button id="searchBtn">search</button>
-        </div>
+    <!--input-->
+
+    <div class="input">
+        <input type="text" id="city" name="city">
+        <button id="searchBtn">search</button>
+    </div>
+
+    <!--main section-->>
+
+    <main class="main">
+        
         <div class="output">
             <div class="location"></div>
             <div class="imgDescription"></div>
@@ -28,13 +33,15 @@
                 <div class="Fahneit"></div>
             </div>
         </div>
-    </div>
+
+    </main>
+
 
     <!-- footer -->
 
     <div class="footer">
         <p>elvinmanzi02</p><a href="https://github.com/elvinmanzi02/weather.git" target="_blank" rel="noopener noreferrer">
-            <img src="https://github.com/fluidicon.png" alt="GitHub" width="10" height="10">
+            <img src="https://github.com/fluidicon.png" alt="GitHub" width="30" height="30">
           </a>
     </div>
 
