awasome weather app

--- a/index.html
+++ b/index.html
@@ -28,13 +28,21 @@
             <div class="location"></div>
             <div class="imgDescription"></div>
             <div class="time"></div>
+            <div class="otherInfo">
+                <div class="humidityDisplay"></div>
+                <div class="pressureDisplay"></div>
+                <div class="windDisplay"></div>
+            </div>
             <div class="result">
                 <div class="celcius"></div>
-                <div class="Fahneit"></div>
             </div>
         </div>
 
     </main>
+    <div class="change-degree">
+        <button id="celciusBtn">&#176;C</button>
+        <button id="fahneitBtn">&#176;F</button>
+    </div>
 
 
     <!-- footer -->
